--- a/notebooks/03_Intro_a_trading_automatico.ipynb
+++ b/notebooks/03_Intro_a_trading_automatico.ipynb
@@ -5,7 +5,7 @@
    "id": "00949c52-9483-403e-b72a-cf9b4d9d2f4b",
    "metadata": {},
    "source": [
-    "# Introducción al trading automático con Binance API\n",
+    "# Introducción al trading automático con Binance API (WIP)\n",
     "\n",
     "**Recursos y enlaces de interés**\n",
     "\n",
